fix header spacing

--- a/src/css/scss/components/_primary-nav.scss
+++ b/src/css/scss/components/_primary-nav.scss
@@ -6,7 +6,7 @@
  * Navigation tag
  */
 .c-primary-nav {
-	display: none;
+	margin: 0 5rem;
 	padding-right: 20px;
 
 	&--is-active {
