--- a/src/css/scss/layout/_landing.scss
+++ b/src/css/scss/layout/_landing.scss
@@ -15,10 +15,10 @@
 
 .headers {
     flex: 70%;
-    padding: 60px;
     
-    padding-left: 15%;
-    padding-top: 10%;
+    
+    padding-left: 20vw;
+    padding-top: 20vh;
 
     h1 {
         padding-bottom: 30px;
